<resources>
    <string name="app_name">FootWare</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="usermobile">Mobile No</string>
    <string name="useraddress">Address</string>
    <string name="Password">Password</string>
    <string name="myacc">Account</string>
    <string name="myorder">My Order</string>
    <string name="stores">Stores</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact Us</string>
    <string name="notification">Notification</string>
    <string name="click">Click</string>
    <string name="_40rs">40rs</string>
    <string name="string_40rs" />
    <string name="string_string_40rs" />
    <string name="white_pvc">White pvc</string>
    <string name="_30rs">30rs</string>
    <string name="electrica_pvc">Electrica pvc</string>
    <string name="pvc_468rs">pvc 468rs</string>
    <string name="pipe">pipe</string>
    <string name="steel_pvc">Steel pvc</string>
    <string name="_50rs">50rs</string>
    <string name="product_discription" />
    <string name="electricapv" />
    <string name="_60rs_piece" />
    <string name="lenth_of_pipe" />
    <string name="_6m" />
    <string name="nominal_size" />
    <string name="buynow" />
    <string name="material" />
    <string name="pvc" />
    <string name="_10_feet" />
    <string name="size_dimeter" />
    <string name="_35rs_piece" />
    <string name="pvc_bend_pipe" />
    <string name="_75rspiece" />
    <string name="features" />
    <string name="_1_seamless_finish" />
    <string name="_2_accurate_dimension" />
    <string name="_3_durability" />
    <string name="Color">Color =Black ,Gray , Pink, Red.</string>
    <string name="Size">Size = 6 to 10</string>
    <string name="Company">Company = Bata,</string>
    <string name="pri">Price 500 to 1000</string>
    <string name="company">Company = Paragon</string>
    <string name="price">Price from 300-500</string>
</resources>
