<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_Ad"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="My Account" />
    <item
        android:id="@+id/nav_Myorder"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/myorder" />

    <item
        android:id="@+id/nav_stores"
        android:icon="@drawable/ic_local_grocery_store_black_24dp"
        android:title="@string/stores" />

    <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/tools" />
</group>
<item android:title="@string/communicate">

<menu>
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/nav_noti"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification" />


</menu>
</item>
</menu>
