<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    tools:context="com.example.rohini.footware.Flat">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="33dp"
        android:text="@string/Color"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="118dp"
        android:layout_marginTop="29dp"
        android:text="@string/Size"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="25dp"
        android:text="@string/Company"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="87dp"
        android:layout_marginTop="29dp"
        android:text="@string/price"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView8"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginEnd="41dp"
        android:layout_marginTop="44dp"
        android:text="@string/_6m"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:text="@string/nominal_size"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/checkbox_off_background"
        android:onClick="Buy"
        android:text="Buy Now" />


</android.widget.RelativeLayout>
